--- a/chocoboworldexe.html
+++ b/chocoboworldexe.html
@@ -8,9 +8,9 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="boko-popup">
-  <img id="boko-img" src="img/BokoLeft.gif" alt="Boko">
-    </div>
+<div id="boko-popup">
+  <video id="boko-video" width="127" height="158" muted playsinline></video>
+</div>
     <script src="script.js"></script>
 </body>
 </html>
