--- a/chocoboworldexe.html
+++ b/chocoboworldexe.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Fauxcobo World</title>
+  <title>Fauxcobo World!</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
