--- a/chocoboworldexe.html
+++ b/chocoboworldexe.html
@@ -9,7 +9,12 @@
 </head>
 <body>
 <div id="boko-popup">
-  <video id="boko-video-back" width="127" height="158" muted playsinline loop></video>
+
+  <video id="back-left" width="127" height="158" muted playsinline loop></video>
+  <video id="back-right" width="127" height="158" muted playsinline loop></video>
+  <video id="back-up" width="127" height="158" muted playsinline loop></video>
+  <video id="back-down" width="127" height="158" muted playsinline loop></video>
+
   <video id="boko-video-front" width="127" height="158" muted playsinline style="position:absolute; top:0; left:0;"></video>
 </div>
     <script src="script.js"></script>
