--- a/chocoboworldexe.html
+++ b/chocoboworldexe.html
@@ -9,13 +9,16 @@
 </head>
 <body>
 <div id="boko-popup">
-
+  <!-- Videos -->
   <video id="back-left" width="127" height="158" muted playsinline loop></video>
   <video id="back-right" width="127" height="158" muted playsinline loop></video>
   <video id="back-up" width="127" height="158" muted playsinline loop></video>
   <video id="back-down" width="127" height="158" muted playsinline loop></video>
-
   <video id="boko-video-front" width="127" height="158" muted playsinline style="position:absolute; top:0; left:0;"></video>
+
+  <div id="start">
+    <img src="img/Start.png" alt="Click to Play">
+  </div>
 </div>
     <script src="script.js"></script>
 </body>
