--- a/chocoboworldexe.html
+++ b/chocoboworldexe.html
@@ -17,7 +17,7 @@
   <video id="boko-video-front" width="127" height="158" muted playsinline style="position:absolute; top:0; left:0;"></video>
 
   <div id="start">
-    <img src="img/Start.png" alt="Click to Play">
+    <img src="Start.png" alt="Click to Play">
   </div>
 </div>
     <script src="script.js"></script>
